--- a/WEB/Dashboard.html
+++ b/WEB/Dashboard.html
@@ -49,7 +49,7 @@
             </div>
             <div class="user-info">
               <div class="search-box">
-                <i class="fa-solid fa-search"></i>
+                <i class="fa-solid fa-search-alt"></i>
                 <input type="text" placeholder="Search...">
               </div>
               <img src="/Images/bluett.jpg" alt="">
