Update Dashboard CSS and HTML

--- a/WEB/Dashboard.html
+++ b/WEB/Dashboard.html
@@ -44,7 +44,7 @@
         <div class="main-content">
           <div class="header-wrapper">
             <div class="header-title">
-              <span>Primary</span>
+              <span>Home</span>
               <h2>Dashboard</h2>
             </div>
             <div class="user-info">
@@ -55,7 +55,38 @@
               <img src="/Images/bluett.jpg" alt="">
             </div>
             </div>
+            <div class="card-container">
+              <h1 class="main-title">Last Year's Numbers</h1>
+              <div class="card-wrapper">
+                <div class="turtle-card">
+                  <div class="card-header">
+                    <div class="ammount">
+                      <span class="title">
+                        Released Turtles
+                      </span>
+                      <span class="ammount-value">
+                        1000
+                      </span>
+                    </div>
+                  </div>
+                </div>
+                <div class="percentage-card">
+                  <div class="card-header">
+                    <div class="ammount">
+                      <span class="title">
+                        Survival Rate
+                      </span>
+                      <span class="ammount-value">
+                        100%
+                      </span>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              
+            </div>
+
           </div>
         </div>
-    </body>
+  </body>
 </html>
