Add sensor cards and sidebar to Dashboard.html and Dashboard.css

--- a/WEB/Dashboard.html
+++ b/WEB/Dashboard.html
@@ -5,6 +5,7 @@
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
     </head>
     <body>
+<!-- Sidebar begins -->
         <div class="sidebar">
           <div class="logo">
             <ul class="menu">
@@ -41,7 +42,9 @@
             </ul>
           </div>
         </div>
-        <div class="main-content">
+<!-- Sidebar ends -->
+<!-- Main Content begins -->
+   <div class="main-content">
           <div class="header-wrapper">
             <div class="header-title">
               <span>Home</span>
@@ -55,6 +58,7 @@
               <img src="/Images/bluett.jpg" alt="">
             </div>
             </div>
+<!-- Year Cards begin -->
             <div class="card-container">
               <h1 class="main-title">Last Year's Numbers</h1>
               <div class="card-wrapper">
@@ -83,8 +87,51 @@
                   </div>
                 </div>
               </div>
-              
             </div>
+<!-- Year Cards end -->
+<!-- Sensor Cards begin -->
+            <div class="sensor-card-container">
+              <h1 class="main-title">Sensor Data</h1>
+              <div class="sensor-card-wrapper">
+                <div class="sensor01-card">
+                  <div class="card-header">
+                    <div class="ammount">
+                      <span class="sensor-title">
+                        Sensor 01 Data
+                      </span>
+                      <span class="ammount-value">
+                        20
+                      </span>
+                    </div>
+                  </div>
+                </div>
+                <div class="sensor02-card">
+                  <div class="card-header">
+                    <div class="ammount">
+                      <span class="sensor-title">
+                        Sensor 02 Data
+                      </span>
+                      <span class="ammount-value">
+                        50
+                      </span>
+                    </div>
+                  </div>
+                </div>
+                <div class="sensor03-card">
+                  <div class="card-header">
+                    <div class="ammount">
+                      <span class="sensor-title">
+                        Sensor 03 Data
+                      </span>
+                      <span class="ammount-value">
+                        10
+                      </span>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+<!-- Sensor Cards end -->
 
           </div>
         </div>
