--- a/WEB/Dashboard.html
+++ b/WEB/Dashboard.html
@@ -132,6 +132,25 @@
               </div>
             </div>
 <!-- Sensor Cards end -->
+<!--water quality car begin -->
+<div class="water-card-container">
+  <h1 class="main-title">Status in all Tanks</h1>
+  <div class="water-card-wrapper">
+    <div class="water-card">
+      <div class="card-header">
+        <div class="ammount">
+          <span class="water-title">
+            Water Quality
+          </span>
+          <span class="quality-value">
+            GOOD
+          </span>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+<!--water quality car end -->
 
           </div>
         </div>
