--- a/WEB/Dashboard.html
+++ b/WEB/Dashboard.html
@@ -10,7 +10,7 @@
           <div class="logo">
             <ul class="menu">
               <li class="active">
-                <a href="#">
+                <a href="Dashboard.html">
                   <i class="fas fa-home"></i>
                   <span>Home</span>
                 </a>
