--- a/WEB/Dashboard.html
+++ b/WEB/Dashboard.html
@@ -16,7 +16,7 @@
                 </a>
               </li>
               <li>
-                <a href="#">
+                <a href="Sensor.html">
                   <i class="fas fa-tachometer-alt"></i>
                   <span>Sensors</span>
                 </a>
