Add new CSS styles and HTML files for data input page

--- a/WEB/Dashboard.html
+++ b/WEB/Dashboard.html
@@ -132,7 +132,7 @@
               </div>
             </div>
 <!-- Sensor Cards end -->
-<!--water quality car begin -->
+<!--water quality card begin -->
 <div class="water-card-container">
   <h1 class="main-title">Status in all Tanks</h1>
   <div class="water-card-wrapper">
@@ -150,7 +150,7 @@
     </div>
   </div>
 </div>
-<!--water quality car end -->
+<!--water quality card end -->
 
           </div>
         </div>
