Refactor styling and update links in HTML files

--- a/WEB/Dashboard.html
+++ b/WEB/Dashboard.html
@@ -22,7 +22,7 @@
                 </a>
               </li>
               <li>
-                <a href="#">
+                <a href="DataInput.html">
                   <i class="fas fa-download"></i>
                   <span>Data Input</span>
                 </a>
