--- a/WEB/DataInput.html
+++ b/WEB/DataInput.html
@@ -22,7 +22,7 @@
                 </a>
               </li>
               <li>
-                <a href="#">
+                <a href="DataInput.html">
                   <i class="fas fa-download"></i>
                   <span>Data Input</span>
                 </a>
@@ -59,17 +59,17 @@
             </div>
         </div>
         <div class="card-container">
-            <h1 class="main-title">Add Turtle Data</h1>
+            <h1 class="main-title">Add Tank Data</h1>
             <div class="card-wrapper">
                 <div class="main-container">
                       <form>
                         <div class="input-box-1">
-                          <label for="date">Date</label>
-                          <input type="date" id="date" name="date">
+                          <label for="date" class="datename">Date</label>
+                          <input type="date" id="date" name="date" class="datel">
                         </div>
                         <div class="input-box-2">
-                          <label for="turtle">Turtle</label>
-                          <input type="text" id="turtle" name="turtle">
+                          <label for="turtle" class="turtlename">Number of Turtles</label>
+                          <input type="text" id="turtle" name="turtle" class="text">
                         </div>
                       <div class="button-wrapper">
                         <button type="button" class="button-primary" aria-label="Add">Add</button>
@@ -79,7 +79,7 @@
                   </div>
             </div>
           </div>
-        </div>
+        </d
 <!-- Main content ends-->
   </body>
 </html>
