--- a/WEB/Dashboard.html
+++ b/WEB/Dashboard.html
@@ -34,7 +34,7 @@
                 </a>
               </li>
               <li class="logout">
-                <a href="#">
+                <a href="Welcome.html">
                   <i class="fas fa-sign-out-alt"></i>
                   <span>Log Out</span>
                 </a>
