--- a/WEB/Welcome.html
+++ b/WEB/Welcome.html
@@ -9,7 +9,7 @@
               <div class="title">Welcome Owner</div>
               <img loading="lazy" srcset="/Images/bluett.jpg" class="image" />
               <div class="div-4">
-                <button class="signin-btn">Sign in</button>
+                <a href="Signin.html" class="signin-btn">Sign in</a>
                 <button class="exit-btn">Exit</button>
               </div>
             </div>
