data input finalised

--- a/WEB/DataInput.html
+++ b/WEB/DataInput.html
@@ -59,7 +59,7 @@
             </div>
         </div>
         <div class="card-container">
-            <h1 class="main-title">Add Tank Data</h1>
+            <h1 class="main-title">Add Tank 01 Data</h1>
             <div class="card-wrapper">
                 <div class="main-container">
                       <form>
@@ -79,7 +79,49 @@
                   </div>
             </div>
           </div>
-        </d
+          <div class="card-container">
+            <h1 class="main-title">Add Tank 02 Data</h1>
+            <div class="card-wrapper">
+                <div class="main-container">
+                      <form>
+                        <div class="input-box-1">
+                          <label for="date" class="datename">Date</label>
+                          <input type="date" id="date" name="date" class="datel">
+                        </div>
+                        <div class="input-box-2">
+                          <label for="turtle" class="turtlename">Number of Turtles</label>
+                          <input type="text" id="turtle" name="turtle" class="text">
+                        </div>
+                      <div class="button-wrapper">
+                        <button type="button" class="button-primary" aria-label="Add">Add</button>
+                        <button type="button" class="button-secondary" aria-label="Clear">Clear</button>
+                      </div>
+                    </form>
+                  </div>
+            </div>
+          </div>
+          <div class="card-container">
+            <h1 class="main-title">Add Tank 03 Data</h1>
+            <div class="card-wrapper">
+                <div class="main-container">
+                      <form>
+                        <div class="input-box-1">
+                          <label for="date" class="datename">Date</label>
+                          <input type="date" id="date" name="date" class="datel">
+                        </div>
+                        <div class="input-box-2">
+                          <label for="turtle" class="turtlename">Number of Turtles</label>
+                          <input type="text" id="turtle" name="turtle" class="text">
+                        </div>
+                      <div class="button-wrapper">
+                        <button type="button" class="button-primary" aria-label="Add">Add</button>
+                        <button type="button" class="button-secondary" aria-label="Clear">Clear</button>
+                      </div>
+                    </form>
+                  </div>
+            </div>
+          </div>
+   </div>
 <!-- Main content ends-->
   </body>
 </html>
