created data out page

--- a/WEB/Tables.html
+++ b/WEB/Tables.html
@@ -1,7 +1,7 @@
 <html>
     <head>
         <title>Dashboard</title>
-        <link rel="stylesheet" type="text/css" href="/Style/Sensor.css">
+        <link rel="stylesheet" type="text/css" href="/Style/Tables.css">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
     </head>
     <body>
