--- a/WEB/DataInput.html
+++ b/WEB/DataInput.html
@@ -28,7 +28,7 @@
                 </a>
               </li>
               <li>
-                <a href="#">
+                <a href="Tables.html">
                   <i class="fas fa-chart-bar"></i>
                   <span>Data Output</span>
                 </a>
