--- a/WEB/Tables.html
+++ b/WEB/Tables.html
@@ -60,124 +60,88 @@
             </div>
 <!--First sensor card-->
           <div class="tabular-wrapper">
-            <h3 class="main-title">Sensor 01</h3>
+            <h3 class="main-title">Tank 01</h3>
             <div class="table-container">
                 <table>
                     <thead>
                         <tr>
-                            <th>Time</th>
-                            <th>Readings</th>
+                            <th>Date</th>
+                            <th>Number of Turtles</th>
                         </tr>
                     </thead>
                     <tbody>
                         <tr>
-                            <td>12:00 p.m.</td>
+                            <td>05/12/2024</td>
                         <td>25</td>
                         </tr>
                         <tr>
-                            <td>12:00 p.m.</td>
+                            <td>05/12/2024</td>
                         <td>25</td>
                         </tr>
                         <tr>
-                            <td>12:00 p.m.</td>
+                            <td>05/12/2024</td>
                         <td>25</td>
                         </tr>
                     </tbody>
                 </table>
-                <div class="sensor-card">
-                    <div class="card-header">
-                      <div class="ammount">
-                        <span class="title">
-                          Average
-                        </span>
-                        <span class="ammount-value">
-                          25
-                        </span>
-                      </div>
-                    </div>
-                  </div>
             </div>
           </div>
 <!--First sensor ends-->
 <!--Second sensor card-->
             <div class="tabular-wrapper">
-                <h3 class="main-title">Sensor 02</h3>
+                <h3 class="main-title">Tank 02</h3>
                 <div class="table-container">
                     <table>
                         <thead>
                             <tr>
-                                <th>Time</th>
-                                <th>Readings</th>
+                                <th>Date</th>
+                                <th>Number of Turtles</th>
                             </tr>
                         </thead>
                         <tbody>
                             <tr>
-                                <td>12:00 p.m.</td>
+                                <td>05/12/2024</td>
                             <td>25</td>
                             </tr>
                             <tr>
-                                <td>12:00 p.m.</td>
+                                <td>05/12/2024</td>
                             <td>25</td>
                             </tr>
                             <tr>
-                                <td>12:00 p.m.</td>
+                                <td>05/12/2024</td>
                             <td>25</td>
                             </tr>
                         </tbody>
                     </table>
-                    <div class="sensor-card">
-                        <div class="card-header">
-                        <div class="ammount">
-                            <span class="title">
-                            Average
-                            </span>
-                            <span class="ammount-value">
-                            25
-                            </span>
-                        </div>
-                        </div>
-                    </div>
                 </div>
           </div>
 <!--Second sensor ends-->
 <!--Third sensor card-->
             <div class="tabular-wrapper">
-                <h3 class="main-title">Sensor 03</h3>
+                <h3 class="main-title">Tank 03</h3>
                 <div class="table-container">
                     <table>
                         <thead>
                             <tr>
-                                <th>Time</th>
-                                <th>Readings</th>
+                                <th>Date</th>
+                                <th>Number of Turtles</th>
                             </tr>
                         </thead>
                         <tbody>
                             <tr>
-                                <td>12:00 p.m.</td>
+                                <td>05/12/2024</td>
                             <td>25</td>
                             </tr>
                             <tr>
-                                <td>12:00 p.m.</td>
+                                <td>05/12/2024</td>
                             <td>25</td>
                             </tr>
                             <tr>
-                                <td>12:00 p.m.</td>
+                                <td>05/12/2024</td>
                             <td>25</td>
                             </tr>
                         </tbody>
                     </table>
-                    <div class="sensor-card">
-                        <div class="card-header">
-                        <div class="ammount">
-                            <span class="title">
-                            Average
-                            </span>
-                            <span class="ammount-value">
-                            25
-                            </span>
-                        </div>
-                        </div>
-                    </div>
                 </div>
             </div>
 <!--Third sensor ends-->
