--- a/WEB/Tables.html
+++ b/WEB/Tables.html
@@ -47,8 +47,8 @@
    <div class="main-content">
           <div class="header-wrapper">
             <div class="header-title">
-              <span>Sensors</span>
-              <h2>Readings with Tables</h2>
+              <span>Data Output</span>
+              <h2>Turtle Data in Tanks</h2>
             </div>
             <div class="user-info">
               <div class="search-box">
@@ -58,7 +58,7 @@
               <img src="/Images/bluett.jpg" alt="">
             </div>
             </div>
-<!--First sensor card-->
+<!--First table card-->
           <div class="tabular-wrapper">
             <h3 class="main-title">Tank 01</h3>
             <div class="table-container">
@@ -82,12 +82,19 @@
                             <td>05/12/2024</td>
                         <td>25</td>
                         </tr>
+                        <tr>
+                            <td>05/12/2024</td>
+                        <td>25</td>
+                        </tr><tr>
+                            <td>05/12/2024</td>
+                        <td>25</td>
+                        </tr>
                     </tbody>
                 </table>
             </div>
           </div>
-<!--First sensor ends-->
-<!--Second sensor card-->
+<!--First table ends-->
+<!--Second table card-->
             <div class="tabular-wrapper">
                 <h3 class="main-title">Tank 02</h3>
                 <div class="table-container">
@@ -115,8 +122,8 @@
                     </table>
                 </div>
           </div>
-<!--Second sensor ends-->
-<!--Third sensor card-->
+<!--Second table ends-->
+<!--Third table card-->
             <div class="tabular-wrapper">
                 <h3 class="main-title">Tank 03</h3>
                 <div class="table-container">
@@ -144,7 +151,7 @@
                     </table>
                 </div>
             </div>
-<!--Third sensor ends-->
+<!--Third table ends-->
 
 
         </div>
